--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^6.3.1",
     "@mui/styled-engine-sc": "^6.3.1",
     "cra-template": "1.2.0",
+    "gsap": "^3.12.7",
     "nth-check": "^2.1.1",
     "postcss": "^8.4.49",
     "react": "^18.0.0",
