--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/styled-engine-sc": "^6.3.1",
     "cra-template": "1.2.0",
     "gsap": "^3.12.7",
+    "jquery": "^3.7.1",
     "nth-check": "^2.1.1",
     "postcss": "^8.4.49",
     "react": "^18.0.0",
