--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.4.49",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.14",
